tests/expectations/parser/program/mapping_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'mappin'
    --> test:3:5
     |
   3 |     mappin balances: address => u128;
     |     ^^^^^^
